--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "motion": "^11.15.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
+    "primereact": "^10.8.5",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "react-modal": "^3.16.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
